css/chata-styles.css
.autoql-vanilla-chata-drawer *, .autoql-vanilla-chata-drawer *:before, .autoql-vanilla-chata-drawer *:after{
    box-sizing: border-box !important;
    padding: 0px;
    margin: 0px;
}

.autoql-vanilla-chata-drawer path{
    fill: currentColor;
}

.autoql-vanilla-chata-drawer line{
    fill: currentColor;
}

.autoql-vanilla-chata-body-drawer-open{
    overflow: hidden;
    touch-action: none;
}

.autoql-vanilla-drawer-handle .autoql-vanilla-chata-bubbles-icon{
    margin-top: 12px;
    display: block;
}

.autoql-vanilla-drawer-handle:hover{
    cursor: pointer;
}
.autoql-vanilla-drawer-handle{
    position: fixed;
    cursor: pointer;
    z-index: 10;
    text-align: center;
    line-height: 40px;
    font-size: 16px;
    display: flex;
    justify-content: center;
    align-items: center;
    vertical-align:middle;
    background-color: #26a7df;
    color: #fff;
    /* color: #28a8e0; */
    /* background: var(--chata-drawer-background-color); */
    /* left: -40px;
    border-radius: 4px 0 0 4px; */
    box-shadow: -2px 0 8px rgba(0, 0, 0, 0.15);

    -webkit-transition: opacity 0.5s ease;
    transition: opacity 0.5s ease;
    overflow: hidden;
    width: 50px;
    height: 50px;
    border-radius: 50%;
}

.autoql-vanilla-icon-blue{
    color: #28a8e0;
}

.autoql-vanilla-drawer-handle.right-btn{
    top: 55px;
    right: 10px;
}

.autoql-vanilla-drawer-handle.left-btn{
    top: 55px;
    left: 10px;
}

.autoql-vanilla-drawer-handle.bottom-btn{
    bottom: 10px;
    left: calc(50% - 20px);
}

.autoql-vanilla-drawer-handle.top-btn{
    top: 10px;
    left: calc(50% - 20px);
}

#notification-icon{
    font-size: 26px;
    margin-top: 13px;
}

.autoql-vanilla-drawer-wrapper{
    background: #000;
    opacity: .3;
    width: 100%;
    position: fixed;
    height: 100%;
    top: 0;
    left: 0;
    transition: opacity 0.3 cubic-bezier(0.78, 0.14, 0.15, 0.86), height 0s ease 0.3s;
    z-index: 2;
}
body{
    transition: transform 0.3s ease-in-out;
}
.autoql-vanilla-chata-drawer{
    z-index: 10;
    background: white;
    position: fixed;
    /* right: 0; */
    height: 100%;
    /* top: 0px; */
    width: 0px;
    box-shadow: -2px 0 8px rgba(0, 0, 0, 0.15);
    /* transition: transform 0.3 cubic-bezier(0.78, 0.14, 0.15, 0.86), opacity 0.3 cubic-bezier(0.78, 0.14, 0.15, 0.86), box-shadow 0.3 cubic-bezier(0.78, 0.14, 0.15, 0.86); */
    /* transform: translateX(500px); */
    transition: transform 0.3s ease-in-out;
    background: var(--chata-drawer-background-color);
    border-radius: 4px;
}

.autoql-vanilla-chat-header-container {
    display: flex;
    justify-content: space-between;
    width: 100%;
    height: 60px;
    background: var(--chata-drawer-accent-color);
    box-shadow: 0 0 14px 1px rgba(0, 0, 0, 0.15);
    flex-grow: 0;
    flex-shrink: 0;
    z-index: 2;
    word-wrap: break-word;
    align-items: center;
    color:white;
    position: relative;
}

.autoql-vanilla-popover-container{
    z-index: 9999;
    border: 1px solid #ababab52;
    border-radius: 4px;
    box-shadow: 0px 0 8px rgba(0, 0, 0, 0.15);
    position: absolute;
    right: 5px;
    top: 50px;
    opacity: 0;
    display: block;
    visibility: hidden;
    transition: all 0.35s ease 0s;
    /* background: white; */
}

.autoql-vanilla-chata-confirm-text {
    text-align: center;
    width: 100%;
}

.autoql-vanilla-clear-messages-confirm-popover {
    color: var(--chata-drawer-text-color-primary);
    background: var(--chata-drawer-background-color);
    text-align: right;
    padding: 18px !important;
    width: 266px;
}
.autoql-vanilla-chata-confirm-btn {
    margin: 7px 0px 0 2px !important;
    border-radius: 4px !important;
    cursor: pointer !important;
    outline: none !important;
    -webkit-transition: all 0.2s ease;
    transition: all 0.2s ease;
    border-width: 2px;
    display: inline-block;
    text-align: center;
    align-items: flex-start;
    cursor: default;
    box-sizing: border-box;
    margin: 0em;
    padding: 3px 6px !important;
    border-width: 2px;
    border-style: outset;
    border-image: initial;
    font-size: 14px !important;
}

.autoql-vanilla-chata-confirm-btn.no {
    color: inherit;
    border: 1px solid rgba(0,0,0,.15);
    background: inherit
}

.autoql-vanilla-chata-confirm-btn.yes {
    background: var(--chata-drawer-accent-color) !important;
    border: 2px outset var(--chata-drawer-accent-color) !important;
    color: white;
}

.autoql-vanilla-chata-confirm-btn:hover{
    opacity: .7;
}
.autoql-vanilla-chata-confirm-icon {
    color: #faad14;
    display: inline-block;
}

.autoql-vanilla-chata-header-center-container {
    position: relative;
    line-height: 60px;
    font-size: 18px;
    letter-spacing: 0.05em;
    font-weight: 600;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    font-family: var(--chata-drawer-font-family);
    font-size: 18px;
    letter-spacing: 0.05em;
}

.autoql-vanilla-chat-header-container button {
    background: transparent;
    border: none;
    color: white;
    margin: 10px;
    margin-right: 0;
    font-size: 20px;
    cursor: pointer;
    outline: none !important;
}

.autoql-vanilla-chat-message-toolbar.right .autoql-vanilla-chata-toolbar-btn path{
    fill: unset;
}

.autoql-vanilla-chat-message-toolbar.right .autoql-vanilla-chata-toolbar-btn svg{
    font: unset;
}

.autoql-vanilla-chata-button{
    background: none !important;
}
.autoql-vanilla-chata-button.close-action svg {
    width: 30px;
    height: 30px;
    padding-top: 3px;
}

.autoql-vanilla-chat-header-container button svg {
    width: 22px;
    height: 22px;
    padding-right: 2px;
    padding-top: 2px;
}

.autoql-vanilla-chat-header-container .autoql-vanilla-chata-button:hover{
    /* color: var(--chata-drawer-hover-color); */
    opacity: .7;
}

.autoql-vanilla-chata-button.clear-all {
    margin-right: 11px;
}
/* ... */

